tests/integration/snapshots/integration__conformance__n_number_minus_space_1.json.snap
---
source: tests/integration/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
[- 1]
stdout --- 
<empty>
stderr --- 
error: expected digit following minus sign, found ` `
 --> stdin:1:2
  |
1 | [- 1]
  |  ^
  |  |
  |  minus sign found here
