tests/integration/snapshots/integration__conformance__n_number_nan.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
command: "jjp"
status: 1
success: false
stdout ---
[NaN]
stderr ---
error: unexpected character `N`. expected start of a json value
 --> stdin:1:2
  |
1 | [NaN]
  |  ^
